# ProcessWatchdog

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: processcontroller.cpp  processcontroller.h  processmanager.cpp  processmanager.h  processmonitor.cpp  processmonitor.h
src/gui/: mainwindow.cpp  mainwindow.h  processdetailsdialog.cpp  processdetailsdialog.h  processviewmodel.cpp  processviewmodel.h
src/threads/: datacollection.cpp  datacollection.h
tests/: test_main.cpp  test_processmanager.cpp  test_processmanager.h  test_processmonitor.cpp  test_processmonitor.h
